--- a/config
+++ b/config
@@ -196,3 +196,7 @@ bindsym $mod + h exec thunar
 #MY APPS
 exec_always feh --bg-scale /home/angel/Pictures/wallp.png
 exec_always picom
+
+#GAPS!!!
+gaps inner 8
+gaps outer 8
